Closed Bug 462979 Opened 16 years ago Closed 16 years ago

[FIX]EventUtils synthesizeMouse is buggy: sends event to wrong place

Categories

(Testing :: Mochitest, defect)

x86
macOS
defect
Not set
normal

Tracking

(Not tracked)

RESOLVED FIXED

People

(Reporter: bzbarsky, Assigned: bzbarsky)

References

(Blocks 1 open bug)

Details

(Keywords: fixed1.9.1)

Attachments

(1 file, 1 obsolete file)

In particular, if the element passed in is not aligned to pixel boundaries, it floors the coords instead of rounding. This causes events to be dispatched with the wrong offset relative to the element. Patch coming up that _should_ fix this (and then enable the test that was failing due to this bug) without causing other tests to go orange. I hope...
Attached patch Like so, I hope (obsolete) — Splinter Review
Assignee: nobody → bzbarsky
Status: NEW → ASSIGNED
Attachment #346190 - Flags: superreview?(roc)
Attachment #346190 - Flags: review?(enndeakin)
Summary: EventUtils synthesizeMouse is buggy: sends event to wrong place → [FIx]EventUtils synthesizeMouse is buggy: sends event to wrong place
Summary: [FIx]EventUtils synthesizeMouse is buggy: sends event to wrong place → [FIX]EventUtils synthesizeMouse is buggy: sends event to wrong place
Attachment #346190 - Flags: superreview?(roc) → superreview+
Attachment #346190 - Flags: review?(enndeakin) → review+
Comment on attachment 346190 [details] [diff] [review] Like so, I hope Looks OK.
Attached patch Better yetSplinter Review
This makes the set of iframe offsets for which this stuff fails much smaller. It's still something like 0.05px wide, which seems too wide to be accounted for by nscoord rounding, but whatever.
Attachment #346190 - Attachment is obsolete: true
Attachment #346812 - Flags: review?(roc)
Blocks: 462881
Comment on attachment 346812 [details] [diff] [review] Better yet It'd be good to enable these tests for 1.9.1 as well.
Attachment #346812 - Flags: approval1.9.1?
Comment on attachment 346812 [details] [diff] [review] Better yet a191=beltzner
Attachment #346812 - Flags: approval1.9.1? → approval1.9.1+
Status: ASSIGNED → RESOLVED
Closed: 16 years ago
Flags: in-testsuite+
Resolution: --- → FIXED
Target Milestone: --- → mozilla1.9.1b3
Keywords: fixed1.9.1
Component: Testing → Mochitest
Flags: in-testsuite+
Product: Core → Testing
QA Contact: testing → mochitest
Target Milestone: mozilla1.9.1b3 → ---
Version: Trunk → unspecified
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: