Bug 462979.  Fix synthesizeMouse to send events to the right place.  r=enn, sr=roc, a=beltzner