dom/src/base/nsDOMWindowUtils.cpp
@@ -195,8 +195,8 @@ nsDOMWindowUtils::Redraw(PRUint32 aCount, PRUint32 *aDurationOut)
 
 NS_IMETHODIMP
 nsDOMWindowUtils::SendMouseEvent(const nsAString& aType,
-                                 PRInt32 aX,
-                                 PRInt32 aY,
+                                 float aX,
+                                 float aY,
                                  PRInt32 aButton,
                                  PRInt32 aClickCount,
                                  PRInt32 aModifiers,
@@ -208,7 +208,8 @@ nsDOMWindowUtils::SendMouseEvent(const nsAString& aType,
     return NS_ERROR_DOM_SECURITY_ERR;
 
   // get the widget to send the event to
-  nsCOMPtr<nsIWidget> widget = GetWidget();
+  nsPoint offset;
+  nsCOMPtr<nsIWidget> widget = GetWidget(&offset);
   if (!widget)
     return NS_ERROR_FAILURE;
 
@@ -242,8 +243,14 @@ nsDOMWindowUtils::SendMouseEvent(const nsAString& aType,
 
   event.clickCount = aClickCount;
   event.time = PR_IntervalNow();
-  event.refPoint.x = aX;
-  event.refPoint.y = aY;
+
+  float appPerDev = float(widget->GetDeviceContext()->AppUnitsPerDevPixel());
+  event.refPoint.x =
+    NSAppUnitsToIntPixels(nsPresContext::CSSPixelsToAppUnits(aX) + offset.x,
+                          appPerDev);
+  event.refPoint.y =
+    NSAppUnitsToIntPixels(nsPresContext::CSSPixelsToAppUnits(aY) + offset.y,
+                          appPerDev);
   event.ignoreScrollFrame = aIgnoreScrollFrame;
 
   nsEventStatus status;
@@ -252,8 +259,8 @@ nsDOMWindowUtils::SendMouseEvent(const nsAString& aType,
 
 NS_IMETHODIMP
 nsDOMWindowUtils::SendMouseScrollEvent(const nsAString& aType,
-                                       PRInt32 aX,
-                                       PRInt32 aY,
+                                       float aX,
+                                       float aY,
                                        PRInt32 aButton,
                                        PRInt32 aScrollFlags,
                                        PRInt32 aDelta,
@@ -265,7 +272,8 @@ nsDOMWindowUtils::SendMouseScrollEvent(const nsAString& aType,
     return NS_ERROR_DOM_SECURITY_ERR;
 
   // get the widget to send the event to
-  nsCOMPtr<nsIWidget> widget = GetWidget();
+  nsPoint offset;
+  nsCOMPtr<nsIWidget> widget = GetWidget(&offset);
   if (!widget)
     return NS_ERROR_NULL_POINTER;
 
@@ -288,8 +296,14 @@ nsDOMWindowUtils::SendMouseScrollEvent(const nsAString& aType,
   event.scrollFlags = aScrollFlags;
 
   event.time = PR_IntervalNow();
-  event.refPoint.x = aX;
-  event.refPoint.y = aY;
+
+  float appPerDev = float(widget->GetDeviceContext()->AppUnitsPerDevPixel());
+  event.refPoint.x =
+    NSAppUnitsToIntPixels(nsPresContext::CSSPixelsToAppUnits(aX) + offset.x,
+                          appPerDev);
+  event.refPoint.y =
+    NSAppUnitsToIntPixels(nsPresContext::CSSPixelsToAppUnits(aY) + offset.y,
+                          appPerDev);
 
   nsEventStatus status;
   return widget->DispatchEvent(&event, status);
@@ -401,7 +415,7 @@ nsDOMWindowUtils::ForceUpdateNativeMenuAt(const nsAString& indexString)
 }
 
 nsIWidget*
-nsDOMWindowUtils::GetWidget()
+nsDOMWindowUtils::GetWidget(nsPoint* aOffset)
 {
   if (mWindow) {
     nsIDocShell *docShell = mWindow->GetDocShell();
@@ -411,7 +425,7 @@ nsDOMWindowUtils::GetWidget()
       if (presShell) {
         nsIFrame* frame = presShell->GetRootFrame();
         if (frame)
-          return frame->GetWindow();
+          return frame->GetView()->GetNearestWidget(aOffset);
       }
     }
   }
